refactor(symbol): rename 'MemberProvider' to 'SymbolProvider'
- rename `getMembers()` to `getSymbols()`
- other improvements